Ajuste api bd campus
Ajuste de api según los modelos de la versión de Planestic-UD
